--- a/app/src/main/res/layout/acadamic_item.xml
+++ b/app/src/main/res/layout/acadamic_item.xml
@@ -14,13 +14,13 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
+        <com.kredivation.aakhale.components.CircleImageView
             android:id="@+id/imageView"
             android:layout_width="0dp"
-            android:layout_height="@dimen/_80dp"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/_3dp"
             android:layout_gravity="center"
-            android:layout_weight=".2"
-            android:scaleType="fitXY" />
+            android:layout_weight=".2" />
 
         <LinearLayout
             android:layout_width="0dp"
