--- a/app/src/main/res/layout/playerlist_item_row.xml
+++ b/app/src/main/res/layout/playerlist_item_row.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:minHeight="@dimen/_70dp"
     android:orientation="vertical"
+    app:cardCornerRadius="@dimen/_6dp"
+    app:cardElevation="@dimen/_5dp"
     app:cardUseCompatPadding="true">
 
 
@@ -13,6 +16,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_weight="1"
+        android:minHeight="@dimen/_70dp"
         android:orientation="horizontal">
 
 
@@ -21,6 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
+            android:minHeight="@dimen/_70dp"
             android:orientation="vertical">
 
             <TextView
@@ -28,7 +33,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_margin="@dimen/_3dp"
+                android:layout_marginLeft="@dimen/_4dp"
+                android:layout_marginTop="@dimen/_4dp"
                 android:text="Text Umpire "
                 android:textSize="@dimen/_12dp"
                 android:textStyle="bold" />
@@ -37,7 +43,8 @@
                 android:id="@+id/dateInfo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_3dp"
+                android:layout_marginLeft="@dimen/_4dp"
+                android:layout_marginTop="@dimen/_4dp"
                 android:text="30(2013-2018)"
                 android:textSize="@dimen/_12dp"
                 android:textStyle="bold" />
@@ -55,4 +62,4 @@
             android:textColor="@color/green"
             android:textSize="@dimen/_12dp" />
     </LinearLayout>
-</LinearLayout>
+</android.support.design.card.MaterialCardView>
