--- a/app/src/main/res/layout/fragment_create_team.xml
+++ b/app/src/main/res/layout/fragment_create_team.xml
@@ -30,7 +30,7 @@
             <com.kredivation.aakhale.components.ASTEditText
                 android:id="@+id/teameName"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_40dp"
                 android:layout_marginTop="@dimen/_4dp"
                 android:background="@drawable/round_boder"
                 android:padding="@dimen/_12dp"
@@ -52,7 +52,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/round_boder"
-                android:minHeight="@dimen/_90dp"
+                android:minHeight="@dimen/_80dp"
                 android:paddingTop="@dimen/_5dp"
                 android:paddingBottom="@dimen/_5dp"
                 android:textSize="@dimen/_12dp" />
@@ -101,7 +101,7 @@
 
                     <LinearLayout
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="@dimen/_40dp"
                         android:layout_gravity="center"
                         android:layout_marginRight="@dimen/_5dp"
                         android:layout_weight="1"
@@ -125,7 +125,7 @@
 
                     <LinearLayout
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="@dimen/_40dp"
                         android:layout_gravity="center"
                         android:layout_weight="1"
                         android:background="@drawable/edittextround"
@@ -162,7 +162,7 @@
             <com.kredivation.aakhale.components.ASTEditText
                 android:id="@+id/zipCode"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_40dp"
                 android:background="@drawable/round_boder"
                 android:padding="@dimen/_12dp"
                 android:paddingTop="@dimen/_5dp"
