--- a/app/src/main/res/layout/freeservices_item_row.xml
+++ b/app/src/main/res/layout/freeservices_item_row.xml
@@ -9,7 +9,7 @@
     <TextView
         android:id="@+id/count"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="0.2"
         android:text="1"
         android:gravity="center"
@@ -19,7 +19,7 @@
     <TextView
         android:id="@+id/name"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="0.8"
         android:textColor="@color/black"
         android:textSize="@dimen/_12dp" />
