--- a/app/src/main/res/layout/ground__row.xml
+++ b/app/src/main/res/layout/ground__row.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
+        <com.kredivation.aakhale.components.CircleImageView
             android:id="@+id/imageView"
             android:layout_width="0dp"
             android:layout_height="@dimen/_90dp"
@@ -33,9 +33,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_3dp"
-                android:orientation="horizontal"
-                android:padding="@dimen/_3dp">
+                android:layout_marginTop="@dimen/_5dp"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/stadiunName"
@@ -49,11 +48,12 @@
                 <com.kredivation.aakhale.components.ASTButton
                     android:id="@+id/avilableTxt"
                     android:layout_width="0dp"
-                    android:layout_height="@dimen/_30dp"
+                    android:layout_height="@dimen/_25dp"
                     android:layout_gravity="center"
                     android:layout_weight=".3"
                     android:background="@drawable/round_boder_green"
                     android:text="Available"
+                    android:layout_marginRight="@dimen/_5dp"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_10dp"
