--- a/app/src/main/res/layout/upcoming_match_item.xml
+++ b/app/src/main/res/layout/upcoming_match_item.xml
@@ -16,12 +16,12 @@
         android:layout_gravity="center"
         android:orientation="horizontal">
 
-        <ImageView
+        <com.kredivation.aakhale.components.CircleImageView
             android:id="@+id/imageView"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/_5dp"
+            android:layout_margin="@dimen/_3dp"
             android:layout_weight=".2"
             android:src="@drawable/noimage" />
 
