--- a/app/src/main/res/layout/fragment_player_details.xml
+++ b/app/src/main/res/layout/fragment_player_details.xml
@@ -147,8 +147,8 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight=".7"
                                 android:text=""
-                                android:textSize="@dimen/_12dp"
                                 android:textColor="@color/black"
+                                android:textSize="@dimen/_12dp"
                                 android:textStyle="normal" />
                         </LinearLayout>
 
@@ -284,9 +284,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_5dp"
+                    android:padding="@dimen/_5dp"
                     android:text="Team Information"
                     android:textColor="@color/black"
-                    android:padding="@dimen/_5dp"
                     android:textSize="@dimen/_12dp"
                     android:textStyle="bold" />
 
@@ -295,17 +295,35 @@
                     android:id="@+id/teamInfoLayoutView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_5dp"
                     android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/_5dp"
                     android:orientation="vertical" />
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_5dp"
+                    android:padding="@dimen/_5dp"
+                    android:text="Users Sports"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_12dp"
+                    android:textStyle="bold" />
+
+
+                <LinearLayout
+                    android:id="@+id/userSsportsLayoutView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/_5dp"
+                    android:orientation="vertical" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_5dp"
-                    android:padding="@dimen/_5dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:padding="@dimen/_5dp">
 
                     <com.kredivation.aakhale.components.ASTTextView
                         android:layout_width="match_parent"
@@ -363,12 +381,12 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:layout_marginRight="@dimen/_3dp"
             android:layout_weight="1"
             android:background="@drawable/txtbxcolor"
             android:gravity="center"
             android:text="REQUEST"
             android:textColor="@color/white"
-            android:layout_marginRight="@dimen/_3dp"
             android:textSize="@dimen/_12dp"
             android:textStyle="bold" />
 
