--- a/app/src/main/res/layout/playerlist_item_row.xml
+++ b/app/src/main/res/layout/playerlist_item_row.xml
@@ -15,51 +15,67 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:layout_weight="1"
+        android:gravity="center"
         android:minHeight="@dimen/_70dp"
         android:orientation="horizontal">
 
+        <com.kredivation.aakhale.components.CircleImageView
+            android:id="@+id/image"
+            android:layout_width="@dimen/_50dp"
+            android:layout_height="@dimen/_50dp"
+            android:layout_margin="@dimen/_3dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:minHeight="@dimen/_70dp"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/nameTameInfo"
+                android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="@dimen/_4dp"
                 android:layout_marginTop="@dimen/_4dp"
-                android:text="Text Umpire "
+                android:text=""
                 android:textSize="@dimen/_12dp"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/dateInfo"
+                android:id="@+id/userId"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_4dp"
                 android:layout_marginTop="@dimen/_4dp"
-                android:text="30(2013-2018)"
-                android:textSize="@dimen/_12dp"
-                android:textStyle="bold" />
+                android:text=""
+                android:textColor="@color/secondry_txt_color"
+                android:textSize="@dimen/_12dp" />
+
+            <TextView
+                android:id="@+id/address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_4dp"
+                android:layout_marginTop="@dimen/_2dp"
+                android:text=""
+                android:textColor="@color/secondry_txt_color"
+                android:textSize="@dimen/_12dp" />
+
+            <TextView
+                android:id="@+id/status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_4dp"
+                android:layout_marginTop="@dimen/_2dp"
+                android:layout_marginBottom="@dimen/_2dp"
+                android:text="Approved"
+                android:textAllCaps="true"
+                android:textColor="@color/green"
+                android:textSize="@dimen/_12dp" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginRight="@dimen/_10dp"
-            android:gravity="center"
-            android:text="Approved"
-            android:textAllCaps="true"
-            android:textColor="@color/green"
-            android:textSize="@dimen/_12dp" />
+
     </LinearLayout>
 </android.support.design.card.MaterialCardView>
