--- a/app/src/main/res/layout/fragment_create_post.xml
+++ b/app/src/main/res/layout/fragment_create_post.xml
@@ -106,7 +106,7 @@
     </android.support.v4.widget.NestedScrollView>
 
     <com.kredivation.aakhale.components.ASTButton
-        android:id="@+id/continuebtn"
+        android:id="@+id/postbt"
         android:layout_width="@dimen/_190dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -114,7 +114,7 @@
         android:background="@drawable/button_login"
         android:gravity="center"
         android:padding="@dimen/_5dp"
-        android:text="SAVE"
+        android:text="Post"
         android:textColor="@color/white"
         android:textSize="@dimen/_14dp" />
 
