--- a/app/src/main/res/layout/fragment_ground_detail_frgment.xml
+++ b/app/src/main/res/layout/fragment_ground_detail_frgment.xml
@@ -244,33 +244,7 @@
 
                         </LinearLayout>
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal">
 
-                            <TextView
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight=".3"
-                                android:padding="@dimen/_5dp"
-                                android:text="Time Zone"
-                                android:textSize="@dimen/_12dp" />
-
-
-                            <TextView
-                                android:id="@+id/timeZoneTxt"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:layout_weight=".7"
-                                android:padding="@dimen/_5dp"
-                                android:text=""
-                                android:textColor="@color/black"
-                                android:textSize="@dimen/_12dp" />
-
-
-                        </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -299,7 +273,27 @@
 
 
                         </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
 
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:padding="@dimen/_5dp"
+                                android:text="Time Zone"
+                                android:textColor="@color/black"
+                                android:textSize="@dimen/_12dp" />
+
+                            <LinearLayout
+                                android:id="@+id/timeZoneLayoutView"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical" />
+
+
+                        </LinearLayout>
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
