--- a/app/src/main/res/layout/chat_msg_row.xml
+++ b/app/src/main/res/layout/chat_msg_row.xml
@@ -4,16 +4,16 @@
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/_10dp"
     android:background="#00000000"
+    android:layout_marginTop="@dimen/_10dp"
     android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/serverside"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/_5dp"
         android:orientation="horizontal"
+        android:layout_marginLeft="@dimen/_5dp"
         android:padding="@dimen/_1dp">
 
         <LinearLayout
@@ -89,7 +89,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:layout_weight="0.7"
-            android:background="@drawable/server_chatbg"
+            android:background="@drawable/my_side_chatbg"
             android:orientation="vertical"
             android:padding="@dimen/_1dp">
 
