--- a/app/src/main/res/layout/fragment_postitem_list.xml
+++ b/app/src/main/res/layout/fragment_postitem_list.xml
@@ -3,10 +3,29 @@
     android:layout_height="match_parent"
     android:padding="8dp">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical" />
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:dividerHeight="1dp" />
+        </android.support.v4.widget.SwipeRefreshLayout>
+
+        <ProgressBar
+            android:id="@+id/loaddataProgress"
+            android:layout_width="@dimen/_40dp"
+            android:layout_height="@dimen/_40dp" />
+    </LinearLayout>
 
 </RelativeLayout>
